--- a/action.yml
+++ b/action.yml
@@ -33,5 +33,8 @@ runs:
         git-token: ${{ inputs.token }}
     - id: git-clone
       name: Clone the branch
-      run: git clone -b ${{ inputs.branch }} ${{ inputs.path }}
+      run: |
+        $repository = ${{ inputs.repository }}
+        $repository = $repository -like "https://github.com/*" ? $repository : "https://github.com/$repository"
+        git clone -b ${{ inputs.branch }} $repository ${{ inputs.path }}
       shell: pwsh
