--- a/action.yml
+++ b/action.yml
@@ -34,7 +34,14 @@ runs:
     - id: git-clone
       name: Clone the branch
       run: |
-        $repository = "${{ inputs.repository }}"
-        $repository = $repository -like "https://github.com/*" ? "$repository" : "https://github.com/$repository"
-        git clone -b ${{ inputs.branch }} "$repository" ${{ inputs.path }}
+        if(!(Test-Path -Path "${{ inputs.path }}"))
+        {
+          $repository = "${{ inputs.repository }}"
+          $repository = $repository -like "https://github.com/*" ? "$repository" : "https://github.com/$repository"
+          git clone -b ${{ inputs.branch }} "$repository" ${{ inputs.path }}
+        }
+        else
+        {
+          Write-Warning -Message "The path \"${{ inputs.path }}\" already exists; skipping."
+        }
       shell: pwsh
